# ros2-source-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
index/: distros.json
index/foxy/: ackermann_msgs.json  action_msgs.json  actionlib_msgs.json  ament_clang_format.json  ament_clang_tidy.json  ament_cmake.json  ament_cmake_auto.json  ament_cmake_catch2.json  ament_cmake_clang_format.json  ament_cmake_clang_tidy.json  ament_cmake_copyright.json  ament_cmake_core.json  ament_cmake_cppcheck.json  ament_cmake_cpplint.json  ament_cmake_export_definitions.json  ament_cmake_export_dependencies.json  ament_cmake_export_include_directories.json  ament_cmake_export_interfaces.json  ament_cmake_export_libraries.json  ament_cmake_export_link_flags.json  ament_cmake_export_targets.json  ament_cmake_flake8.json  ament_cmake_gmock.json  ament_cmake_google_benchmark.json  ament_cmake_gtest.json  ament_cmake_include_directories.json  ament_cmake_libraries.json  ament_cmake_lint_cmake.json  ament_cmake_mypy.json  ament_cmake_nose.json  ament_cmake_pclint.json  ament_cmake_pep257.json  ament_cmake_pycodestyle.json  ament_cmake_pyflakes.json  ament_cmake_pytest.json  ament_cmake_python.json  ament_cmake_ros.json  ament_cmake_target_dependencies.json  ament_cmake_test.json  ament_cmake_uncrustify.json  (+919 more)
index/galactic/: ackermann_msgs.json  action_msgs.json  actionlib_msgs.json  ament_black.json  ament_clang_format.json  ament_clang_tidy.json  ament_cmake.json  ament_cmake_auto.json  ament_cmake_black.json  ament_cmake_catch2.json  ament_cmake_clang_format.json  ament_cmake_clang_tidy.json  ament_cmake_copyright.json  (+776 more)
ros2_parser/: pyproject.toml
ros2_parser/src/mcp_server/: distro.py  loader.py  server.py
ros2_parser/src/mcp_server/tests/: conftest.py  test_distro.py  test_integration.py  test_loader.py  test_tools.py
ros2_parser/src/ros2_indexer/: __init__.py  cli.py  config.py  models.py  serializer.py
ros2_parser/src/ros2_indexer/fetchers/: distro.py  repo.py
ros2_parser/src/ros2_indexer/parsers/: messages.py  package_xml.py
ros2_parser/tests/: test_crossref.py  test_distro_fetcher.py  test_integration.py  test_messages.py  test_package_xml.py  test_repo.py  test_serializer.py
ros2_parser/tests/fixtures/: Fibonacci.action  Image.msg  SetCameraInfo.srv  distro_snippet.yaml  package.xml
scripts/: deploy-index.sh
(+5127 files in other folders)
