<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_pkg</name>
  <version>1.2.3</version>
  <description>A test package for unit testing.</description>
  <license>Apache License 2.0</license>
  <maintainer email="test@example.com">Test Maintainer</maintainer>
  <author>Test Author</author>
  <url type="repository">https://github.com/test/test_pkg</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>builtin_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
